{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 91,
  "lineage": "71ddebff-b57a-c49d-0791-7b27f95497a8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "azfirewall-apprules",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "demoazfirewall",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/azureFirewalls/demoazfirewall/applicationRuleCollections/app-allow-rule-websites",
            "name": "app-allow-rule-websites",
            "priority": 200,
            "resource_group_name": "RG-Networking-Demo",
            "rule": [
              {
                "description": "",
                "fqdn_tags": [],
                "name": "allow-microsoft",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  },
                  {
                    "port": 80,
                    "type": "Http"
                  }
                ],
                "source_addresses": [
                  "10.0.2.0/24",
                  "10.1.1.0/24"
                ],
                "target_fqdns": [
                  "*.azure.com",
                  "*.microsoft.com",
                  "*.windows.net"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "fd2fwnat",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "demoazfirewall",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/azureFirewalls/demoazfirewall/natRuleCollections/testcollection",
            "name": "testcollection",
            "priority": 200,
            "resource_group_name": "RG-Networking-Demo",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "52.155.42.0"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "fw2lbnat",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "translated_address": "10.1.1.100",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "azfirewall-netrules",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "demoazfirewall",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/azureFirewalls/demoazfirewall/networkRuleCollections/testcollection",
            "name": "testcollection",
            "priority": 200,
            "resource_group_name": "RG-Networking-Demo",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "168.63.129.16"
                ],
                "destination_ports": [
                  "53"
                ],
                "name": "net-allow-rule-dns",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lbspokeweb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/frontendIPConfigurations/PrivateIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/loadBalancingRules/LBRule"
                ],
                "name": "PrivateIPAddress",
                "private_ip_address": "10.1.1.100",
                "private_ip_address_allocation": "Static",
                "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet"
              }
            ],
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb",
            "location": "westus",
            "name": "lbspokeweb",
            "private_ip_address": "10.1.1.100",
            "private_ip_addresses": [
              "10.1.1.100"
            ],
            "resource_group_name": "RG-Networking-Demo",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.spokevnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb-backendpool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC0/ipConfigurations/IPConfig1",
              "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC1/ipConfigurations/IPConfig1"
            ],
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb",
            "name": "BackEndAddressPool",
            "resource_group_name": "RG-Networking-Demo"
          },
          "dependencies": [
            "azurerm_lb.lbspokeweb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.spokevnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/probes/tcpProbe",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb",
            "name": "tcpProbe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo"
          },
          "dependencies": [
            "azurerm_lb.lbspokeweb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.spokevnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/frontendIPConfigurations/PrivateIPAddress",
            "frontend_ip_configuration_name": "PrivateIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb",
            "name": "LBRule",
            "probe_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/probes/tcpProbe",
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo"
          },
          "dependencies": [
            "azurerm_lb.lbspokeweb",
            "azurerm_lb_backend_address_pool.lb-backendpool",
            "azurerm_lb_probe.lb_probe",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.spokevnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC0",
            "ip_configuration": [
              {
                "name": "IPConfig1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-08-20-56",
            "name": "azwsserver-NIC0",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "RG-Networking-Demo",
            "virtual_machine_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Compute/virtualMachines/azwsserver0"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.spokevnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC1",
            "ip_configuration": [
              {
                "name": "IPConfig1",
                "primary": true,
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-08-24-53",
            "name": "azwsserver-NIC1",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "RG-Networking-Demo",
            "virtual_machine_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Compute/virtualMachines/azwsserver1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.spokevnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nichub",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azmngserver1-nic01",
            "ip_configuration": [
              {
                "name": "IPConfig1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-08-2E-74",
            "name": "azmngserver1-nic01",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "RG-Networking-Demo",
            "virtual_machine_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Compute/virtualMachines/azmngserver1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.managementsubnet",
            "azurerm_virtual_network.hubvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicop",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/onpremserver1-nic01",
            "ip_configuration": [
              {
                "name": "IPConfig1",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/onpremSubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-08-B3-AD",
            "name": "onpremserver1-nic01",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "RG-Networking-Demo",
            "virtual_machine_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Compute/virtualMachines/onpremserver1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.onpremSubnet",
            "azurerm_virtual_network.onpremvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "backendassociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC0/ipConfigurations/IPConfig1|/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "IPConfig1",
            "network_interface_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC0"
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_lb.lbspokeweb",
            "azurerm_lb_backend_address_pool.lb-backendpool",
            "azurerm_network_interface.nic",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC1/ipConfigurations/IPConfig1|/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/loadBalancers/lbspokeweb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "IPConfig1",
            "network_interface_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkInterfaces/azwsserver-NIC1"
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_lb.lbspokeweb",
            "azurerm_lb_backend_address_pool.lb-backendpool",
            "azurerm_network_interface.nic",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgmgmt",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_mgmt",
            "location": "westus",
            "name": "nsg_mgmt",
            "resource_group_name": "RG-Networking-Demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "managment-in-allow_icmp",
                "priority": 120,
                "protocol": "Icmp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "managment-in-allow_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "managment-in-allow_rdp",
                "priority": 105,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgweb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web",
            "location": "westus",
            "name": "nsg_web",
            "resource_group_name": "RG-Networking-Demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web-in-allow_icmp",
                "priority": 130,
                "protocol": "Icmp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web-in-allow_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web-in-allow_rdp",
                "priority": 105,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web-in-allow_https",
                "priority": 125,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web-in-allow_http",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "managment-in-allow_icmp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_mgmt/securityRules/managment-in-allow_icmp",
            "name": "managment-in-allow_icmp",
            "network_security_group_name": "nsg_mgmt",
            "priority": 120,
            "protocol": "Icmp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgmgmt",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "managment-in-allow_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_mgmt/securityRules/managment-in-allow_rdp",
            "name": "managment-in-allow_rdp",
            "network_security_group_name": "nsg_mgmt",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgmgmt",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "managment-in-allow_ssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_mgmt/securityRules/managment-in-allow_ssh",
            "name": "managment-in-allow_ssh",
            "network_security_group_name": "nsg_mgmt",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgmgmt",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-in-allow_http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web/securityRules/web-in-allow_http",
            "name": "web-in-allow_http",
            "network_security_group_name": "nsg_web",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgweb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-in-allow_https",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web/securityRules/web-in-allow_https",
            "name": "web-in-allow_https",
            "network_security_group_name": "nsg_web",
            "priority": 125,
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgweb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-in-allow_icmp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web/securityRules/web-in-allow_icmp",
            "name": "web-in-allow_icmp",
            "network_security_group_name": "nsg_web",
            "priority": 130,
            "protocol": "Icmp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgweb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-in-allow_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web/securityRules/web-in-allow_rdp",
            "name": "web-in-allow_rdp",
            "network_security_group_name": "nsg_web",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgweb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-in-allow_ssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web/securityRules/web-in-allow_ssh",
            "name": "web-in-allow_ssh",
            "network_security_group_name": "nsg_web",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "RG-Networking-Demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsgweb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azfirewallpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/publicIPAddresses/azfirewallpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.155.42.0",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "azfirewallpip",
            "resource_group_name": "RG-Networking-Demo",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastionpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/publicIPAddresses/bastionpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.155.41.227",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "bastionpip",
            "resource_group_name": "RG-Networking-Demo",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hubvpngw-pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/publicIPAddresses/hubvpngw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.210.53.150",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "hubvpngw-pip",
            "resource_group_name": "RG-Networking-Demo",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onpremvpngw-pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/publicIPAddresses/onpremvpngw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.210.54.198",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "onpremvpngw-pip",
            "resource_group_name": "RG-Networking-Demo",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "hubvnet-managementsubnet-to-internet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-hubvnet-managementsubnet/routes/hubvnet-managementsubnet-to-internet",
            "name": "hubvnet-managementsubnet-to-internet",
            "next_hop_in_ip_address": "10.0.8.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "RG-Networking-Demo",
            "route_table_name": "route-hubvnet-managementsubnet",
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.route-hubvnet-managementsubnet",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "onpremvnet-onpresubnet-to-hubvnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/27",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-onpremvnet-onpresubnet/routes/onpremvnet-onpresubnet-to-hubvnet",
            "name": "onpremvnet-onpresubnet-to-hubvnet",
            "next_hop_in_ip_address": "10.0.8.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "RG-Networking-Demo",
            "route_table_name": "route-onpremvnet-onpresubnet",
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.route-onpremvnet-onpresubnet",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "spokevnet-websubnet-to-internet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-spokevnet-websubnet/routes/spokevnet-websubnet-to-internet",
            "name": "spokevnet-websubnet-to-internet",
            "next_hop_in_ip_address": "10.0.8.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "RG-Networking-Demo",
            "route_table_name": "route-spokevnet-websubnet",
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.route-spokevnet-websubnet",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-hubvnet-managementsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-hubvnet-managementsubnet",
            "location": "westus",
            "name": "route-hubvnet-managementsubnet",
            "resource_group_name": "RG-Networking-Demo",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "hubvnet-managementsubnet-to-internet",
                "next_hop_in_ip_address": "10.0.8.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-onpremvnet-onpresubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-onpremvnet-onpresubnet",
            "location": "westus",
            "name": "route-onpremvnet-onpresubnet",
            "resource_group_name": "RG-Networking-Demo",
            "route": [
              {
                "address_prefix": "10.0.1.0/27",
                "name": "onpremvnet-onpresubnet-to-hubvnet",
                "next_hop_in_ip_address": "10.0.8.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/GatewaySubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-spokevnet-websubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-spokevnet-websubnet",
            "location": "westus",
            "name": "route-spokevnet-websubnet",
            "resource_group_name": "RG-Networking-Demo",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "spokevnet-websubnet-to-internet",
                "next_hop_in_ip_address": "10.0.8.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureBastionSubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.10.0/27",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "RG-Networking-Demo",
            "virtual_network_name": "hubvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.hubvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.8.0/26",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "RG-Networking-Demo",
            "virtual_network_name": "hubvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.hubvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gatewaysubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/27",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "RG-Networking-Demo",
            "virtual_network_name": "hubvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.hubvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "managementsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet",
            "name": "managementsubnet",
            "resource_group_name": "RG-Networking-Demo",
            "virtual_network_name": "hubvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.hubvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onpremSubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/onpremSubnet",
            "name": "onpremSubnet",
            "resource_group_name": "RG-Networking-Demo",
            "virtual_network_name": "onpremvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.onpremvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onpremgatewaysubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.10.0/27",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "RG-Networking-Demo",
            "virtual_network_name": "onpremvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.onpremvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet",
            "name": "websubnet",
            "resource_group_name": "RG-Networking-Demo",
            "virtual_network_name": "spokevnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.spokevnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgmgmtsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet",
            "network_security_group_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_mgmt",
            "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet"
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsgmgmt",
            "azurerm_resource_group.rg",
            "azurerm_subnet.managementsubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nswebsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet",
            "network_security_group_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web",
            "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet"
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsgweb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route-hubvnet-managementsubnet-ass",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet",
            "route_table_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-hubvnet-managementsubnet",
            "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet"
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.route-hubvnet-managementsubnet",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.managementsubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route-onpremvnet-onpresubnet-ass",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-onpremvnet-onpresubnet",
            "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/GatewaySubnet"
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.route-onpremvnet-onpresubnet",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.gatewaysubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route-spokevnet-websubnet-ass",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet",
            "route_table_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/routeTables/route-spokevnet-websubnet",
            "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet"
          },
          "dependencies": [
            "azurerm_availability_set.avset",
            "azurerm_firewall.azfirewall",
            "azurerm_firewall_application_rule_collection.azfirewall-apprules",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.azfirewallpip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.route-spokevnet-websubnet",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_machine_extension.extspoke",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_windows_virtual_machine.vmspoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hubvnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet",
            "location": "westus",
            "name": "hubvnet",
            "resource_group_name": "RG-Networking-Demo",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/27",
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.10.0/27",
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/managementsubnet",
                "name": "managementsubnet",
                "security_group": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_mgmt"
              },
              {
                "address_prefix": "10.0.8.0/26",
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "onpremvnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/onpremvnet",
            "location": "westus",
            "name": "onpremvnet",
            "resource_group_name": "RG-Networking-Demo",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/onpremSubnet",
                "name": "onpremSubnet"
              },
              {
                "address_prefix": "192.168.10.0/27",
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spokevnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet",
            "location": "westus",
            "name": "spokevnet",
            "resource_group_name": "RG-Networking-Demo",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/subnets/websubnet",
                "name": "websubnet",
                "security_group": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/networkSecurityGroups/nsg_web"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "hubvpngw",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "10.0.1.30"
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworkGateways/hubvpngw",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/publicIPAddresses/hubvpngw-pip",
                "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/subnets/GatewaySubnet"
              }
            ],
            "location": "westus",
            "name": "hubvpngw",
            "resource_group_name": "RG-Networking-Demo",
            "sku": "Basic",
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.hubvpngw-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.gatewaysubnet",
            "azurerm_virtual_network.hubvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "onpremvpngw",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "192.168.10.30"
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworkGateways/onpremvpngw",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/publicIPAddresses/onpremvpngw-pip",
                "subnet_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/GatewaySubnet"
              }
            ],
            "location": "westus",
            "name": "onpremvpngw",
            "resource_group_name": "RG-Networking-Demo",
            "sku": "Basic",
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.onpremvpngw-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.onpremgatewaysubnet",
            "azurerm_virtual_network.onpremvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "Hub-to-Onprem-vpn",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_protocol": "IKEv2",
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/connections/Hub-to-Onprem-vpn",
            "location": "westus",
            "name": "Hub-to-Onprem-vpn",
            "peer_virtual_network_gateway_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworkGateways/onpremvpngw",
            "resource_group_name": "RG-Networking-Demo",
            "routing_weight": 0,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworkGateways/hubvpngw"
          },
          "dependencies": [
            "azurerm_public_ip.hubvpngw-pip",
            "azurerm_public_ip.onpremvpngw-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.gatewaysubnet",
            "azurerm_subnet.onpremgatewaysubnet",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.onpremvnet",
            "azurerm_virtual_network_gateway.hubvpngw",
            "azurerm_virtual_network_gateway.onpremvpngw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "Onprem-to-hub-vpn",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_protocol": "IKEv2",
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/connections/Onprem-to-hub-vpn",
            "location": "westus",
            "name": "Onprem-to-hub-vpn",
            "peer_virtual_network_gateway_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworkGateways/hubvpngw",
            "resource_group_name": "RG-Networking-Demo",
            "routing_weight": 0,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworkGateways/onpremvpngw"
          },
          "dependencies": [
            "azurerm_public_ip.hubvpngw-pip",
            "azurerm_public_ip.onpremvpngw-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.gatewaysubnet",
            "azurerm_subnet.onpremgatewaysubnet",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.onpremvnet",
            "azurerm_virtual_network_gateway.hubvpngw",
            "azurerm_virtual_network_gateway.onpremvpngw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Hub2Spoke",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet/virtualNetworkPeerings/Hub2Spoke",
            "name": "Hub2Spoke",
            "remote_virtual_network_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet",
            "resource_group_name": "RG-Networking-Demo",
            "use_remote_gateways": false,
            "virtual_network_name": "hubvnet"
          },
          "dependencies": [
            "azurerm_public_ip.hubvpngw-pip",
            "azurerm_public_ip.onpremvpngw-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.gatewaysubnet",
            "azurerm_subnet.onpremgatewaysubnet",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.onpremvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_virtual_network_gateway.hubvpngw",
            "azurerm_virtual_network_gateway.onpremvpngw",
            "azurerm_virtual_network_gateway_connection.Hub-to-Onprem-vpn",
            "azurerm_virtual_network_gateway_connection.Onprem-to-hub-vpn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Spoke2Hub",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/spokevnet/virtualNetworkPeerings/Spoke2Hub",
            "name": "Spoke2Hub",
            "remote_virtual_network_id": "/subscriptions/ff04471a-bb4c-4a06-9ff0-fda4c38e5fbd/resourceGroups/RG-Networking-Demo/providers/Microsoft.Network/virtualNetworks/hubvnet",
            "resource_group_name": "RG-Networking-Demo",
            "use_remote_gateways": true,
            "virtual_network_name": "spokevnet"
          },
          "dependencies": [
            "azurerm_public_ip.hubvpngw-pip",
            "azurerm_public_ip.onpremvpngw-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.gatewaysubnet",
            "azurerm_subnet.onpremgatewaysubnet",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.onpremvnet",
            "azurerm_virtual_network.spokevnet",
            "azurerm_virtual_network_gateway.hubvpngw",
            "azurerm_virtual_network_gateway.onpremvpngw",
            "azurerm_virtual_network_gateway_connection.Hub-to-Onprem-vpn",
            "azurerm_virtual_network_gateway_connection.Onprem-to-hub-vpn"
          ]
        }
      ]
    }
  ]
}